...
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="search_button"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="detail_back"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                </wkWebViewConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="webView"/>
                                </userDefinedRuntimeAttributes>
                            </wkWebView>
...
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="close_search_btn"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                        <real key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="search_done_btn"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                        <rect key="frame" x="0.0" y="44" width="414" height="216"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="option_picker"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                                            <barButtonItem title="Done" id="2M6-XS-6fC">
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="option_done"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
...
